<resources>
    <string name="app_name">俄罗斯方块</string>
    <string name="up">上</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="down">下</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="game_over">游戏结束</string>
    <string name="long_press_to_start">长按开始游戏</string>
    <string name="next">下一块</string>
    <string name="max_score">最高分数</string>
    <string name="current_score">当前分数</string>
    <string name="change">变换</string>
    <string name="fast_down">快速下落</string>
</resources>
